# LW-Vulkan

./: README.md
Vulkan-Rendering/: Vulkan-Rendering.sln  Vulkan-Rendering.vcxproj  Vulkan-Rendering.vcxproj.filters
Vulkan-Rendering/Dependencies/Vulkan/include/glm/: CMakeLists.txt
Vulkan-Rendering/Dependencies/Vulkan/lib/: SDL2_test.lib  SDL2_testd.lib  SDL2main.lib  SDL2maind.lib
Vulkan-Rendering/Vulkan-Rendering/x64/Debug/: Vulkan-Rendering.exe.recipe  Vulkan-Rendering.ilk  triangleapplication.obj.enc  vc143.idb
Vulkan-Rendering/Vulkan-Rendering/x64/Debug/Vulkan-Rendering.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Vulkan-Rendering.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Vulkan-Rendering/Vulkan-Rendering/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
Vulkan-Rendering/Vulkan-Rendering/x64/Release/: Vulkan-Rendering.exe.recipe  Vulkan-Rendering.iobj  Vulkan-Rendering.ipdb
Vulkan-Rendering/Vulkan-Rendering/x64/Release/Vulkan-Rendering.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Vulkan-Rendering.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Vulkan-Rendering/shaders/: compileshaders.bat
Vulkan-Rendering/src/: TriangleApplication.cpp  TriangleApplication.h  Vulkan-Rendering.cpp
